# quimera_robot

./: README.md
quimera_robot/: CMakeLists.txt  package.xml
quimera_robot_control/: CMakeLists.txt  package.xml
quimera_robot_control/config/: quimera_control.yaml  quimera_vel.yaml
quimera_robot_control/launch/: quimera_control.launch
quimera_robot_gazebo/: CMakeLists.txt  package.xml
quimera_robot_gazebo/launch/: quimera_robot.launch  scan_test.launch
quimera_robot_gazebo/world/: scan_test.world
quimera_robot_navigation/: CMakeLists.txt  package.xml
quimera_robot_navigation/config/: costmap_common_params.yaml
quimera_robot_navigation/launch/: amcl.launch  move_base.launch  quimera_robot_navigation.launch
quimera_robot_navigation/rviz/: quimera_robot_navigation.rviz
