<?xml version="1.0"?>
<package format="2">
  <name>quimera_robot_navigation</name>
  <version>0.0.0</version>
  <description>The navigation package of the quimera robot</description>

   <maintainer email="pxalcantara@gmail.com">Pedro Alcantara</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>dwa_local_planner</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
